# twin

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: cli.py
backend/api/: dependencies.py  main.py  security.py
backend/api/middleware/: logging.py  ratelimit.py
backend/api/routes/: admin.py  ingestion.py  query.py  twin.py  validation.py  workflow.py
backend/core/: auth.py  config.py  database.py  observability.py  security.py
backend/ingestion/: __init__.py  api.py  celery_tasks.py
backend/integrations/: github.py  jira.py
backend/integrations/slack/: blocks.py  bot.py
backend/knowledge/graph/: manager.py  queries.py
backend/knowledge/ingestion/: container_storage.py  parsers.py  pipeline.py  storage.py
backend/knowledge/ingestion/workers/: __init__.py  base.py  confluence.py  github.py  google.py  jira.py
backend/knowledge/retrieval/: citations.py  feedback.py  graph_rag.py  offline.py  ranker.py
backend/knowledge/vector/: embeddings.py  index.py  search.py
backend/models/: container.py  document.py  incident.py  query.py  role.py
backend/orchestration/: cache.py  consumer.py  publisher.py  router.py  session.py
backend/utils/: audit.py  monitoring.py
backend/validation/: __init__.py  harness.py  test_cases.json
backend/workflows/: activities.py  delegation.py  engine.py  incident.py  ingestion.py  onboarding.py  registry.py  release.py
backend/workflows/templates/: incident.py  onboarding.py  release.py
docs/: CONTAINER_ARTIFACTS.md  IMPLEMENTATION_SUMMARY.md  INGESTION_SERVICE.md  QUICK_START.md  VALIDATION_HARNESS.md
frontend/admin/: package.json
infrastructure/docker/: docker-compose.yml
infrastructure/kubernetes/configmaps/: backend-config.yaml  twinops-config.yaml  twinops-secrets.yaml.example
infrastructure/kubernetes/deployments/: backend-deployment.yaml  backend.yaml
scripts/: ingest_container_example.py  migrate.py  seed.py  seed_roles.py  setup.py  verify_tracing.py
tests/e2e/: test_placeholder.py
twinops/: .coverage  README.md  coverage.xml  docker-compose.yml  pyproject.toml  requirements.txt
twinops/backend/api/: main.py
twinops/backend/api/middleware/: auth.py  logging.py
twinops/backend/api/routes/: query.py
twinops/backend/core/: config.py  exceptions.py  security.py
twinops/backend/integrations/: base.py  google_workspace.py
twinops/backend/integrations/slack/: bot.py  commands.py  events.py
twinops/backend/knowledge/graph/: manager.py  models.py  queries.py
twinops/backend/knowledge/ingestion/: chunkers.py  extractors.py  parsers.py  pipeline.py
twinops/backend/knowledge/retrieval/: citations.py  graph_rag.py  ranker.py
twinops/backend/knowledge/vector/: embeddings.py  search.py
twinops/backend/models/: __init__.py  document.py  person.py  query.py  resource.py  response.py  role.py  user.py
twinops/backend/orchestration/: context.py  router.py
twinops/backend/utils/: audit.py  llm.py  monitoring.py  validators.py
twinops/frontend/admin/public/: index.html
twinops/frontend/admin/src/: App.tsx
twinops/infrastructure/docker/: Dockerfile.backend  docker-compose.yml
twinops/infrastructure/kubernetes/services/: backend-service.yaml  backend.yaml
twinops/infrastructure/terraform/aws/: main.tf
twinops/scripts/: setup.py
twinops/tests/integration/: test_graph_manager.py  test_graph_rag.py
twinops/tests/unit/: test_config.py
